--- a/app/src/main/res/layout/activity_perform_new_wfms.xml
+++ b/app/src/main/res/layout/activity_perform_new_wfms.xml
@@ -258,7 +258,7 @@
                     android:textStyle="normal" />
 
 
-                <androidx.appcompat.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvActivity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
