--- a/app/src/main/res/layout/toolbar_filter.xml
+++ b/app/src/main/res/layout/toolbar_filter.xml
@@ -3,28 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:padding="10dp"
-    android:background="@color/colorBlue">
+    android:background="@color/colorBlue"
+    android:padding="10dp">
 
-
-    <ImageView
-        android:id="@+id/iconFilterToolbar"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_alignParentStart="true"
+    <com.htistelecom.htisinhouse.font.Ubuntu
+        android:id="@+id/tvApplyFilterToolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/icon_filter_team"
-        android:visibility="visible"
-        tools:ignore="ContentDescription" />
+        android:text="@string/strApplySmall"
+        android:textColor="@color/white"
+        android:textSize="16sp" />
+
+    <!--    <ImageView-->
+    <!--        android:id="@+id/iconFilterToolbar"-->
+    <!--        android:layout_width="20dp"-->
+    <!--        android:layout_height="20dp"-->
+    <!--        android:layout_alignParentStart="true"-->
+    <!--        android:layout_centerVertical="true"-->
+    <!--        android:src="@drawable/icon_filter_team"-->
+    <!--        android:visibility="visible"-->
+    <!--        tools:ignore="ContentDescription" />-->
 
     <com.htistelecom.htisinhouse.font.Ubuntu
         android:id="@+id/txtFilterToolbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:layout_centerHorizontal="true"
-        android:layout_toRightOf="@+id/iconFilterToolbar"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp"
         android:text="@string/strFilters"
         android:textColor="@color/white"
         android:textSize="16sp" />
