--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -31,7 +31,7 @@
         android:textSize="18sp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvTerritoryFilter"
+        android:id="@+id/rvBranchFilter"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
 </LinearLayout>
