--- a/app/src/main/res/layout/fragment_team_wfms.xml
+++ b/app/src/main/res/layout/fragment_team_wfms.xml
@@ -18,7 +18,7 @@
             android:background="@drawable/rect_white_no_corner"
             android:orientation="horizontal"
             android:padding="10dp"
-            android:visibility="invisible">
+            android:visibility="visible">
 
             <ImageView
                 android:layout_width="20dp"
@@ -32,6 +32,7 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
                 android:background="@null"
+                android:id="@+id/etSearchFragmentTeamWFMS"
                 android:hint="@string/strSearch"
                 android:textSize="16sp" />
 
@@ -46,7 +47,7 @@
             android:background="@drawable/rect_blue_back"
             android:orientation="horizontal"
             android:padding="7dp"
-            android:visibility="invisible">
+            android:visibility="visible">
 
             <ImageView
                 android:layout_width="20dp"
