--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -21,6 +21,8 @@
             android:layout_width="wrap_content"
             android:id="@+id/tvNoTaskSheetDialogFragment"
             android:text="@string/strNoTaskFound"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
