--- a/app/src/main/res/layout/fragment_add_project.xml
+++ b/app/src/main/res/layout/fragment_add_project.xml
@@ -164,12 +164,15 @@
 
         <com.htistelecom.htisinhouse.font.UbuntuButton
             android:id="@+id/btnSubmitAddProjectFragment"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
             android:paddingLeft="15dp"
+            android:layout_margin="15dp"
             android:paddingTop="8dp"
+            android:background="@drawable/rect_background_border_orange_radius_13"
+            android:textColor="@color/white"
             android:paddingRight="15dp"
             android:paddingBottom="8dp"
             android:text="@string/strSubmit" />
