--- a/app/src/main/res/layout/fragment_office.xml
+++ b/app/src/main/res/layout/fragment_office.xml
@@ -28,9 +28,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:layout_marginBottom="@dimen/_15sdp"
-            android:background="@drawable/login_button"
-            android:padding="@dimen/_8sdp"
+            android:background="@drawable/rect_background_border_orange_radius_13"
             android:text="@string/submit"
             android:textAllCaps="false"
             android:textColor="@color/white"
