--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottomSheet"
     android:layout_width="match_parent"
@@ -8,21 +7,35 @@
     android:clipToPadding="true"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
+        <com.htistelecom.htisinhouse.font.UbuntuBold
+            android:id="@+id/tvTodayLeadMarketing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Leads"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center"
+            android:textSize="20sp" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvSheetDialogFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
         <com.htistelecom.htisinhouse.font.Ubuntu
-            android:layout_width="wrap_content"
             android:id="@+id/tvNoTaskSheetDialogFragment"
-            android:text="@string/strNoTaskFound"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:layout_height="wrap_content"/>
+            android:text="@string/strNoTaskFound"
+            android:textSize="20sp"
+            android:visibility="gone" />
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
