--- a/app/src/main/res/layout/row_marketing_task.xml
+++ b/app/src/main/res/layout/row_marketing_task.xml
@@ -1,195 +1,200 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginTop="10dp"
     android:layout_height="wrap_content"
-    app:cardUseCompatPadding="true">
+    android:orientation="vertical">
 
+    <androidx.cardview.widget.CardView
 
-    <LinearLayout
-        android:id="@+id/orderlist_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingTop="5dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="5dp">
+        app:cardCornerRadius="10dp"
+        app:cardElevation="7dp"
+        app:cardUseCompatPadding="true">
+
 
         <LinearLayout
+            android:id="@+id/orderlist_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="100"
-            android:layout_marginTop="15dp">
+            android:baselineAligned="false"
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="5dp">
 
-            <com.htistelecom.htisinhouse.font.Ubuntu
-                android:id="@+id/txtCompanyName"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_weight="50"
-                android:text="Company Name"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:layout_marginTop="15dp"
+                android:layout_weight="100">
+
+                <com.htistelecom.htisinhouse.font.UbuntuBold
+                    android:id="@+id/txtCompanyName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="50"
+                    android:text="Company Name"
+                    android:textColor="@color/grey_text2"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <com.htistelecom.htisinhouse.font.Ubuntu
+                    android:id="@+id/tvCompanyName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:textColor="@color/grey_text2"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+
+                android:layout_weight="100">
+
+                <com.htistelecom.htisinhouse.font.UbuntuBold
+                    android:id="@+id/txtEmail"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="50"
+                    android:text="Email"
+                    android:textColor="@color/grey_text2"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <com.htistelecom.htisinhouse.font.Ubuntu
+                    android:id="@+id/tvEmail"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:textColor="@color/grey_text2"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+
+                android:layout_weight="100">
+
+                <com.htistelecom.htisinhouse.font.UbuntuBold
+                    android:id="@+id/txtMobile"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="50"
+                    android:text="Mobile Number"
+                    android:textColor="@color/grey_text2"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <com.htistelecom.htisinhouse.font.Ubuntu
+                    android:id="@+id/tvMobielNumber"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:textColor="@color/grey_text2"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+
+                android:layout_weight="100">
+
+                <com.htistelecom.htisinhouse.font.UbuntuBold
+                    android:id="@+id/txtLead"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="50"
+                    android:text="Lead Generated"
+                    android:textColor="@color/grey_text2"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <com.htistelecom.htisinhouse.font.Ubuntu
+                    android:id="@+id/tvLeadGenerated"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:textColor="@color/grey_text2"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+
+                android:layout_weight="100">
+
+                <com.htistelecom.htisinhouse.font.UbuntuBold
+                    android:id="@+id/txtDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="50"
+                    android:text="Date"
+                    android:textColor="@color/grey_text2"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <com.htistelecom.htisinhouse.font.Ubuntu
+                    android:id="@+id/tvDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:textColor="@color/grey_text2"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
 
             <com.htistelecom.htisinhouse.font.UbuntuBold
-                android:id="@+id/tvCompanyName"
-                android:layout_width="0dp"
+                android:id="@+id/txtAddress"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
 
-        </LinearLayout>
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+                android:text="@string/Address"
+                android:textSize="16sp" />
 
-            android:layout_weight="100">
 
             <com.htistelecom.htisinhouse.font.Ubuntu
-                android:id="@+id/txtEmail"
-                android:layout_width="0dp"
+                android:id="@+id/tvAddressMarketingTaskAdapter"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_weight="50"
-                android:text="Email"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:layout_marginTop="15dp"
+                android:background="@drawable/bg_edittext"
+                android:hint="@string/Address"
+                android:maxLines="3"
 
-            <com.htistelecom.htisinhouse.font.UbuntuBold
-                android:id="@+id/tvEmail"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:padding="@dimen/_15sdp"
+                android:textSize="16sp" />
+
+
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-
-            android:layout_weight="100">
-
-            <com.htistelecom.htisinhouse.font.Ubuntu
-                android:id="@+id/txtMobile"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_weight="50"
-                android:text="Mobile Number"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <com.htistelecom.htisinhouse.font.UbuntuBold
-                android:id="@+id/tvMobielNumber"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-
-            android:layout_weight="100">
-
-            <com.htistelecom.htisinhouse.font.Ubuntu
-                android:id="@+id/txtLead"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_weight="50"
-                android:text="Lead Generated"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <com.htistelecom.htisinhouse.font.UbuntuBold
-                android:id="@+id/tvLeadGenerated"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-
-            android:layout_weight="100">
-
-            <com.htistelecom.htisinhouse.font.Ubuntu
-                android:id="@+id/txtCity"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_weight="50"
-                android:text="City"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <com.htistelecom.htisinhouse.font.UbuntuBold
-                android:id="@+id/tvCity"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-
-            android:layout_weight="100">
-
-            <com.htistelecom.htisinhouse.font.Ubuntu
-                android:id="@+id/txtDate"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_weight="50"
-                android:text="Date"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <com.htistelecom.htisinhouse.font.UbuntuBold
-                android:id="@+id/tvDate"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@color/grey_text2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-
-
-
-
-
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
